# branding-simply-linux

./: Makefile.in  branding.spec  components.mk  configure.ac  slinux.rcc
branding-simply-linux/: Makefile.in  configure.ac  configure.ac.tmp  indexhtml.desktop.in
branding-simply-linux/alterator/design/: design.qss
branding-simply-linux/bootloader/: gfxboot.cfg.in  gfxboot.cfg.in.tmp  gfxboot.cfg.in.tmp2
branding-simply-linux/bootsplash/animations/: penguin.mng
branding-simply-linux/bootsplash/config/: bootsplash-1024x768.cfg.in  bootsplash-1280x1024.cfg.in  bootsplash-1280x800.cfg.in  bootsplash-640x480.cfg.in  bootsplash-800x600.cfg.in
branding-simply-linux/bootsplash/images/: bootsplash_logo.mng  silent_infotext.mng  silent_logo.mng  silent_logo2.mng
branding-simply-linux/components/alterator/: Makefile
branding-simply-linux/components/browser-qt/: theme.qrc
branding-simply-linux/components/grub2/: theme.txt
branding-simply-linux/components/indexhtml/: index.css  indexhtml.desktop.in
branding-simply-linux/components/indexhtml/img/: bg.png.tmp
branding-simply-linux/indexhtml/: index-en.html.in  index-ru.html.in
branding-simply-linux/notes/: Makefile  license.all.html.in  license.ru.html.in  release-notes.ru.html.in
branding-simply-linux/xfce-settings/etcskel/.config/: user-dirs.dirs
branding-simply-linux/xfce-settings/etcskel/.config/Terminal/: terminalrc
branding-simply-linux/xfce-settings/etcskel/.config/audacious/: config
branding-simply-linux/xfce-settings/etcskel/.config/autostart/: mpd.desktop  Настройки Compiz.desktop
branding-simply-linux/xfce-settings/etcskel/.config/compiz/: fusion-icon
branding-simply-linux/xfce-settings/etcskel/.config/compiz/compizconfig/: Default.ini
branding-simply-linux/xfce-settings/etcskel/.config/xfce4/: Xft.xrdb
branding-simply-linux/xfce-settings/etcskel/.config/xfce4/desktop/: icons.screen0.rc
branding-simply-linux/xfce-settings/etcskel/.config/xfce4/panel/: launcher-10.rc  launcher-12433237533.rc  launcher-7.rc  launcher-9.rc  panels.xml  systray-4.rc  tasklist-3.rc  xkb-plugin-12.rc  xkb-plugin-12433233132.rc
branding-simply-linux/xfce-settings/etcskel/.gconf/apps/gnome-screensaver/: %gconf.xml
branding-simply-linux/xfce-settings/etcskel/.local/share/: gsettings-data-convert
branding-simply-linux/xfce-settings/etcskel/.local/share/applications/: audacious2.desktop  (+17 more)
branding-simply-linux/xfce-settings/etcskel/Templates/: OpenOffice.org Calc.ods  OpenOffice.org Impress.odp
(+246 files in other folders)
