AC_INIT( [branding], [0.1], [http://bugzilla.altlinux.ru] )

PROGRESS_COLOR=00A1E4
TITLE_COLOR=5C96CC
LIGHT_COLOR_HEX=DFDFE0
MIDDLE_COLOR_HEX=C8C9CB
DARK_COLOR_HEX=909195
LIGHT_LABELS_HEX=FFFFFF
DARK_LABELS_HEX=000000
MIDDLE_LABELS_HEX=4d4d4f

AC_SUBST(THEME)
AC_SUBST(NAME)
AC_SUBST(STATUS)
AC_SUBST(VERSION)
AC_SUBST(PROGRESS_COLOR)
AC_SUBST(LIGHT_COLOR_HEX)
AC_SUBST(MIDDLE_COLOR_HEX)
AC_SUBST(DARK_COLOR_HEX)
AC_SUBST(LIGHT_LABELS_HEX)
AC_SUBST(DARK_LABELS_HEX)
AC_SUBST(MIDDLE_LABELS_HEX)
AC_SUBST(TITLE_COLOR)

AC_CONFIG_FILES([
		 Makefile
		 bootloader/config
		 bootsplash/config/bootsplash-640x480.cfg
		 bootsplash/config/bootsplash-800x600.cfg
		 bootsplash/config/bootsplash-1024x768.cfg
		 bootsplash/config/bootsplash-1280x800.cfg
		 alterator/design/design.ini
		 bootloader/gfxboot.cfg
		 notes/release-notes.ru.html
		 notes/release-notes.all.html
		 notes/license.ru.html
		 notes/license.all.html
		 indexhtml.desktop
		 indexhtml/index-ru.html
		 indexhtml/index-en.html
])
AC_OUTPUT
